# CorrSteer

./: .gitignore  CITATION.cff  LICENSE  README.md  eval.py  hosts.md  pyproject.toml  run_all_experiments.sh  sft.py  train.py
corrsteer/: config.py  dataset.py  model.py  steer.py  utils.py
