[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corrsteer"
version = "0.1.0"
description = "Reinforcement Learning for Language Model Steering"
requires-python = ">=3.10"
authors = []
dependencies = [
    "torch>=2.0.0",
    "transformers==4.49.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sae-lens==5.5.2",
    "datasets>=2.12.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "fire>=0.5.0",
    "urllib3<2",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pydantic>=2.11.4",
    "sentence-transformers>=2.7.0"
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
include = ["corrsteer"]

[tool.ruff]
indent-width = 2

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
